// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose message order page Client-side validation triggers 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <a
            href="#messageOrder"
          >
            Select a message order
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/action"
    >
      <input
        name="form-id"
        readonly=""
        type="hidden"
        value="choose-message-order"
      />
      <input
        name="csrf_token"
        readonly=""
        type="hidden"
        value="no_token"
      />
      <div
        class="nhsuk-form-group nhsuk-form-group--error"
      >
        <fieldset
          class="nhsuk-fieldset"
        >
          <legend
            class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
            data-testid="messageOrder-form__legend"
          >
            <h1
              class="nhsuk-fieldset__heading"
            >
              Choose a message order
            </h1>
          </legend>
          <div
            class="nhsuk-form-group nhsuk-form-group--error"
          >
            <div
              class="nhsuk-hint"
              id="messageOrder--hint"
            >
              Select one option
            </div>
            <span
              class="nhsuk-error-message"
              id="messageOrder--error-message"
            >
              <span
                class="nhsuk-u-visually-hidden"
              >
                Error: 
              </span>
              Select a message order
            </span>
            <div
              aria-describedby="messageOrder--hint messageOrder--error-message"
              class="nhsuk-radios"
              id="messageOrder"
            >
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP-radio"
                  id="messageOrder-NHSAPP"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP"
                  id="messageOrder-NHSAPP--label"
                >
                  NHS App only
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL-radio"
                  id="messageOrder-NHSAPP,EMAIL"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL"
                  id="messageOrder-NHSAPP,EMAIL--label"
                >
                  NHS App, Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS-radio"
                  id="messageOrder-NHSAPP,SMS"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS"
                  id="messageOrder-NHSAPP,SMS--label"
                >
                  NHS App, Text message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL,SMS-radio"
                  id="messageOrder-NHSAPP,EMAIL,SMS"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL,SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL,SMS"
                  id="messageOrder-NHSAPP,EMAIL,SMS--label"
                >
                  NHS App, Email, Text message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS,EMAIL-radio"
                  id="messageOrder-NHSAPP,SMS,EMAIL"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS,EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS,EMAIL"
                  id="messageOrder-NHSAPP,SMS,EMAIL--label"
                >
                  NHS App, Text message, Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS,LETTER-radio"
                  id="messageOrder-NHSAPP,SMS,LETTER"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS,LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS,LETTER"
                  id="messageOrder-NHSAPP,SMS,LETTER--label"
                >
                  NHS App, Text message, Letter
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL,SMS,LETTER-radio"
                  id="messageOrder-NHSAPP,EMAIL,SMS,LETTER"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL,SMS,LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL,SMS,LETTER"
                  id="messageOrder-NHSAPP,EMAIL,SMS,LETTER--label"
                >
                  NHS App, Email, Text message, Letter
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="LETTER-radio"
                  id="messageOrder-LETTER"
                  name="messageOrder"
                  type="radio"
                  value="LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-LETTER"
                  id="messageOrder-LETTER--label"
                >
                  Letter only
                </label>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <button
        aria-disabled="false"
        class="nhsuk-button"
        data-testid="submit-button"
        id="choose-message-order-submit-button"
        type="submit"
      >
        Save and continue
      </button>
      <a
        class="inline-block nhsuk-u-font-size-19 nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
        href="/message-plans"
      >
        Go back
      </a>
    </form>
  </main>
</DocumentFragment>
`;

exports[`Choose message order page renders error component 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <a
            href="#page"
          >
            Component error message
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/action"
    >
      <input
        name="form-id"
        readonly=""
        type="hidden"
        value="choose-message-order"
      />
      <input
        name="csrf_token"
        readonly=""
        type="hidden"
        value="no_token"
      />
      <div
        class="nhsuk-form-group"
      >
        <fieldset
          class="nhsuk-fieldset"
        >
          <legend
            class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
            data-testid="messageOrder-form__legend"
          >
            <h1
              class="nhsuk-fieldset__heading"
            >
              Choose a message order
            </h1>
          </legend>
          <div
            class="nhsuk-form-group"
          >
            <div
              class="nhsuk-hint"
              id="messageOrder--hint"
            >
              Select one option
            </div>
            <div
              aria-describedby="messageOrder--hint"
              class="nhsuk-radios"
              id="messageOrder"
            >
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP-radio"
                  id="messageOrder-NHSAPP"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP"
                  id="messageOrder-NHSAPP--label"
                >
                  NHS App only
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL-radio"
                  id="messageOrder-NHSAPP,EMAIL"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL"
                  id="messageOrder-NHSAPP,EMAIL--label"
                >
                  NHS App, Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS-radio"
                  id="messageOrder-NHSAPP,SMS"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS"
                  id="messageOrder-NHSAPP,SMS--label"
                >
                  NHS App, Text message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL,SMS-radio"
                  id="messageOrder-NHSAPP,EMAIL,SMS"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL,SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL,SMS"
                  id="messageOrder-NHSAPP,EMAIL,SMS--label"
                >
                  NHS App, Email, Text message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS,EMAIL-radio"
                  id="messageOrder-NHSAPP,SMS,EMAIL"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS,EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS,EMAIL"
                  id="messageOrder-NHSAPP,SMS,EMAIL--label"
                >
                  NHS App, Text message, Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS,LETTER-radio"
                  id="messageOrder-NHSAPP,SMS,LETTER"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS,LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS,LETTER"
                  id="messageOrder-NHSAPP,SMS,LETTER--label"
                >
                  NHS App, Text message, Letter
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL,SMS,LETTER-radio"
                  id="messageOrder-NHSAPP,EMAIL,SMS,LETTER"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL,SMS,LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL,SMS,LETTER"
                  id="messageOrder-NHSAPP,EMAIL,SMS,LETTER--label"
                >
                  NHS App, Email, Text message, Letter
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="LETTER-radio"
                  id="messageOrder-LETTER"
                  name="messageOrder"
                  type="radio"
                  value="LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-LETTER"
                  id="messageOrder-LETTER--label"
                >
                  Letter only
                </label>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <button
        aria-disabled="false"
        class="nhsuk-button"
        data-testid="submit-button"
        id="choose-message-order-submit-button"
        type="submit"
      >
        Save and continue
      </button>
      <a
        class="inline-block nhsuk-u-font-size-19 nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
        href="/message-plans"
      >
        Go back
      </a>
    </form>
  </main>
</DocumentFragment>
`;

exports[`Choose message order page renders form 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <form
      action="/action"
    >
      <input
        name="form-id"
        readonly=""
        type="hidden"
        value="choose-message-order"
      />
      <input
        name="csrf_token"
        readonly=""
        type="hidden"
        value="no_token"
      />
      <div
        class="nhsuk-form-group"
      >
        <fieldset
          class="nhsuk-fieldset"
        >
          <legend
            class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
            data-testid="messageOrder-form__legend"
          >
            <h1
              class="nhsuk-fieldset__heading"
            >
              Choose a message order
            </h1>
          </legend>
          <div
            class="nhsuk-form-group"
          >
            <div
              class="nhsuk-hint"
              id="messageOrder--hint"
            >
              Select one option
            </div>
            <div
              aria-describedby="messageOrder--hint"
              class="nhsuk-radios"
              id="messageOrder"
            >
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP-radio"
                  id="messageOrder-NHSAPP"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP"
                  id="messageOrder-NHSAPP--label"
                >
                  NHS App only
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL-radio"
                  id="messageOrder-NHSAPP,EMAIL"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL"
                  id="messageOrder-NHSAPP,EMAIL--label"
                >
                  NHS App, Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS-radio"
                  id="messageOrder-NHSAPP,SMS"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS"
                  id="messageOrder-NHSAPP,SMS--label"
                >
                  NHS App, Text message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL,SMS-radio"
                  id="messageOrder-NHSAPP,EMAIL,SMS"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL,SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL,SMS"
                  id="messageOrder-NHSAPP,EMAIL,SMS--label"
                >
                  NHS App, Email, Text message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS,EMAIL-radio"
                  id="messageOrder-NHSAPP,SMS,EMAIL"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS,EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS,EMAIL"
                  id="messageOrder-NHSAPP,SMS,EMAIL--label"
                >
                  NHS App, Text message, Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,SMS,LETTER-radio"
                  id="messageOrder-NHSAPP,SMS,LETTER"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,SMS,LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,SMS,LETTER"
                  id="messageOrder-NHSAPP,SMS,LETTER--label"
                >
                  NHS App, Text message, Letter
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="NHSAPP,EMAIL,SMS,LETTER-radio"
                  id="messageOrder-NHSAPP,EMAIL,SMS,LETTER"
                  name="messageOrder"
                  type="radio"
                  value="NHSAPP,EMAIL,SMS,LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-NHSAPP,EMAIL,SMS,LETTER"
                  id="messageOrder-NHSAPP,EMAIL,SMS,LETTER--label"
                >
                  NHS App, Email, Text message, Letter
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="LETTER-radio"
                  id="messageOrder-LETTER"
                  name="messageOrder"
                  type="radio"
                  value="LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="messageOrder-LETTER"
                  id="messageOrder-LETTER--label"
                >
                  Letter only
                </label>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <button
        aria-disabled="false"
        class="nhsuk-button"
        data-testid="submit-button"
        id="choose-message-order-submit-button"
        type="submit"
      >
        Save and continue
      </button>
      <a
        class="inline-block nhsuk-u-font-size-19 nhsuk-u-margin-left-3 nhsuk-u-padding-top-3"
        href="/message-plans"
      >
        Go back
      </a>
    </form>
  </main>
</DocumentFragment>
`;
